--- a/src/app/pages/partners/controls/controls.scss
+++ b/src/app/pages/partners/controls/controls.scss
@@ -5,6 +5,39 @@
 $breakpt-narrow: 76.7em * $scale-factor;
 $breakpt-med: 93em * $scale-factor;
 
+.partners {
+    .button-with-popover {
+        &:not(.detached) {
+            .popover {
+                border: thin solid ui-color(form-border);
+                border-radius: 0.3rem;
+                border-top-left-radius: 0;
+                margin-top: -0.1rem;
+                padding: 2rem 0;
+
+                .option {
+                    padding: 0.7rem 2.7rem;
+                    white-space: nowrap;
+                }
+            }
+        }
+
+        button {
+            font-weight: normal;
+
+            &.has-selections {
+                background-color: rgba(text-color(link), 0.1);
+                border: thin solid text-color(link);
+
+                .size {
+                    color: text-color(link);
+                    margin-left: 0.25rem;
+                }
+            }
+        }
+    }
+}
+
 .partners .desktop.controls {
     background-color: ui-color(white);
     border-bottom: thin solid ui-color(form-border);
@@ -41,37 +74,6 @@ $breakpt-med: 93em * $scale-factor;
         @include wider-than($breakpt-narrow) {
             grid-auto-flow: column;
             grid-column-gap: 1rem;
-        }
-    }
-
-    .button-with-popover {
-        &:not(.detached) {
-            .popover {
-                border: thin solid ui-color(form-border);
-                border-radius: 0.3rem;
-                border-top-left-radius: 0;
-                margin-top: -0.1rem;
-                padding: 1.3rem 0;
-
-                .option {
-                    padding: 0.7rem 2.7rem;
-                    white-space: nowrap;
-                }
-            }
-        }
-
-        button {
-            font-weight: normal;
-
-            &.has-selections {
-                background-color: rgba(text-color(link), 0.1);
-                border: thin solid text-color(link);
-
-                .size {
-                    color: text-color(link);
-                    margin-left: 0.25rem;
-                }
-            }
         }
     }
 
