--- a/src/app/pages/partners/results/results.scss
+++ b/src/app/pages/partners/results/results.scss
@@ -11,15 +11,14 @@
     .boxed {
         display: grid;
         grid-gap: 3rem;
+        grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
 
         &.grid {
             @include width-up-to($phone-max) {
-                grid-template-columns: repeat(auto-fill, 100%);
                 justify-content: center;
             }
 
             @include wider-than($phone-max) {
-                grid-template-columns: repeat(auto-fill, 21rem);
                 justify-content: left;
             }
 
@@ -31,8 +30,9 @@
                 display: grid;
                 grid-row-gap: 1rem;
                 grid-template: 'image'  8rem
-                'title' 1fr
-                'tags';
+                'title'
+                'tags' 1fr
+                'rating';
                 height: 100%;
                 padding: $normal-margin;
                 text-decoration: none;
@@ -62,27 +62,32 @@
 
                     font-weight: bold;
                     grid-area: title;
-                    text-align: center;
+                    line-height: normal;
                 }
 
-                .resource-description {
-                    display: none;
+                .tags,
+                .stars-and-count {
+                    @include body-font(1.2rem);
+
+                    color: text-color(helper);
                 }
 
                 .tags {
-                    @include body-font(1.1rem);
-
-                    display: grid;
-                    font-weight: bold;
                     grid-area: tags;
-                    grid-gap: 1rem;
-                    justify-self: start;
-                    text-transform: uppercase;
+                }
 
-                    > * {
-                        background-color: ui-color(default);
-                        border-radius: 0.2rem;
-                        padding: 0.5rem 1rem;
+                .stars-and-count {
+                    align-items: center;
+                    grid-area: rating;
+                    display: grid;
+                    grid-auto-flow: column;
+                    grid-column-gap: 0.7rem;
+                    justify-content: left;
+
+                    .stars {
+                        color: os-color(yellow);
+                        font-size: 75%;
+                        padding-bottom: 3%;
                     }
                 }
             }
