Move Give button in mobile menu

--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -74,9 +74,10 @@
             overflow: visible;
         }
 
-        .btn {
-            @include button();
-            @extend %primary;
+        .give-button-item {
+            @include width-up-to($tablet-max) {
+                display: none;
+            }
         }
     }
 
