Add book usage blurbs and hook up Analytics

--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -54,6 +54,10 @@
                 text-align: center;
             }
         }
+
+        span[id] {
+            font-weight: bold;
+        }
     }
 
     .savings-blurb {
