--- a/src/app/components/dialog/dialog.scss
+++ b/src/app/components/dialog/dialog.scss
@@ -51,7 +51,7 @@ dialog {
         background-color: transparent;
         border: 0;
         color: inherit;
-        margin: 0 -0.5rem;
+        margin: 0 -0.5rem 0 2rem;
         padding: 0 0.5rem;
         z-index: 2;
 
