--- a/src/app/pages/llph/llph.scss
+++ b/src/app/pages/llph/llph.scss
@@ -44,6 +44,10 @@ $statue-of-liberty-green: #7bb6ae;
                 grid-column-gap: 3rem;
                 grid-template-columns: 30% 1fr;
             }
+
+            img {
+                width: 100%;
+            }
         }
 
         h2 {
