--- a/src/app/pages/partners/partner-details/reviews/user-review.scss
+++ b/src/app/pages/partners/partner-details/reviews/user-review.scss
@@ -37,7 +37,7 @@
     }
 
     .rating-and-controls,
-    .review {
+    .rating-and-controls ~ * {
         grid-column: 1/3;
     }
 
@@ -48,5 +48,20 @@
         margin: 0 $normal-margin;
         padding: 0 1rem;
         text-transform: uppercase;
+    }
+
+    .response {
+        background-color: ui-color(default);
+        border-radius: 0.3rem;
+        margin-left: $normal-margin;
+        padding: $normal-margin;
+
+        .partner-name {
+            font-weight: bold;
+        }
+    }
+
+    .clipped-text {
+        max-height: 12rem;
     }
 }
