--- a/src/app/pages/partners/partner-details/partner-details.scss
+++ b/src/app/pages/partners/partner-details/partner-details.scss
@@ -4,18 +4,30 @@
     background-color: ui-color(default);
 
     section {
-        padding: 3rem 0;
+        @include width-up-to($phone-max) {
+            padding: $normal-margin 0;
+        }
 
         @include wider-than($phone-max) {
             padding: 3rem;
         }
     }
 
+    .sticky-region {
+        @include wider-than($phone-max) {
+            position: sticky;
+            top: 0;
+            z-index: 1;
+        }
+    }
+
     .scrolling-region {
         background-color: ui-color(white);
         height: 100%;
+        max-width: 100%;
         overflow: auto;
         padding: 0 $normal-margin;
+        width: $content-max;
 
         @include wider-than($phone-max) {
             padding: 0 3rem;
@@ -41,6 +53,7 @@
     }
 
     .tab-heading {
+        background-color: ui-color(white);
         width: 100%;
 
         .tab {
@@ -82,6 +95,16 @@
         &:not(:first-child)::before {
             content: '•';
             margin: 0 0.5rem;
+        }
+    }
+
+    .overview {
+        display: grid;
+        grid-row-gap: 3rem;
+        grid-template-columns: 100%;
+
+        h2 {
+            margin: 0;
         }
     }
 }
