--- a/src/app/pages/partners/partner-details/reviews/rating-form.scss
+++ b/src/app/pages/partners/partner-details/reviews/rating-form.scss
@@ -6,6 +6,11 @@
     .text-content {
         display: block;
         padding-bottom: 6rem;
+
+        @include width-up-to($phone-max) {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 
     .back-button {
@@ -27,10 +32,15 @@
         &.with-tooltip:hover > .tooltip {
             border: thin solid ui-color(form-border);
             box-shadow: none;
+            color: text-color(normal);
 
             @include width-up-to($phone-max) {
                 position: static;
                 width: 100%;
+
+                &[hidden] {
+                    display: none;
+                }
             }
 
             // See https://stackoverflow.com/a/36872375/392102
@@ -71,35 +81,88 @@
     .star-selector {
         align-items: center;
         display: grid;
-        grid-auto-flow: column;
         grid-column-gap: 1rem;
         justify-content: left;
         margin-top: 2rem;
+
+        @include width-up-to($phone-max) {
+            grid-row-gap: 1.5rem;
+            grid-template-columns: 100%;
+        }
+
+        @include wider-than($phone-max) {
+            grid-auto-flow: column;
+        }
     }
 
     .stars {
-        color: os-color(yellow);
         font-size: 3rem;
-    }
+        white-space: nowrap;
 
-    .review-form {
-        margin-top: 3rem;
+        [role="button"] {
+            position: relative;
+
+            :not(:first-child) {
+                position: absolute;
+                bottom: 50%;
+                left: 0;
+                transform: translateY(50%) scale(0.9);
+            }
+        }
+
+        .full {
+            color: os-color(yellow);
+        }
+
+        .empty {
+            &:first-child {
+                color: os-color(light-gray);
+            }
+            &:not(:first-child) {
+                color: ui-color(default);
+            }
+        }
     }
 
     textarea {
         border: thin solid ui-color(form-border);
+        font-family: inherit;
+        font-size: inherit;
         height: 21rem;
-        margin: 1rem 0 3rem;
+        margin: 1rem 0;
+        padding: $normal-margin;
         width: 100%;
+
+    }
+
+    .review-form,
+    textarea {
+        @include wider-than($phone-max) {
+            margin-bottom: 3rem;
+        }
     }
 
     .button-row {
         display: grid;
-        grid-column-gap: 1rem;
+        grid-gap: 1rem;
         grid-template-columns: 1fr auto auto;
 
         .required-message {
             color: os-color(red);
+
+            @include width-up-to($phone-max) {
+                grid-column: 1 / 4;
+            }
+        }
+
+        button {
+            @include button();
+
+            background-color: transparent;
+
+            &.primary {
+                @extend %primary;
+            }
         }
     }
 }
