Stars and Ratings UX fixes, round 2
Issue #1899

--- a/src/app/pages/partners/controls/button-with-popover.scss
+++ b/src/app/pages/partners/controls/button-with-popover.scss
@@ -29,6 +29,10 @@
         position: absolute;
         top: 100%;
         z-index: 3;
+
+        @include width-up-to($phone-max) {
+            right: 0;
+        }
     }
 
     &.detached .popover {
