--- a/src/app/pages/partners/controls/controls.scss
+++ b/src/app/pages/partners/controls/controls.scss
@@ -22,6 +22,16 @@ $breakpt-med: 93em * $scale-factor;
                     padding: 0.7rem 2.7rem;
                     white-space: nowrap;
                 }
+
+                &.fullScreen {
+                    height: calc(100vh - 5rem);
+                    left: 0;
+                    overflow: auto;
+                    position: fixed;
+                    top: 5rem;
+                    width: 100vw;
+                    z-index: 1;
+                }
             }
         }
 
