--- a/src/app/pages/partners/partner-details/reviews/rating-form.scss
+++ b/src/app/pages/partners/partner-details/reviews/rating-form.scss
@@ -81,8 +81,9 @@
     .star-selector {
         align-items: center;
         display: grid;
-        grid-column-gap: 1rem;
+        grid-column-gap: 3rem;
         justify-content: left;
+        margin-bottom: 3rem;
         margin-top: 2rem;
 
         @include width-up-to($phone-max) {
@@ -96,19 +97,12 @@
     }
 
     .stars {
+        align-items: center;
+        display: grid;
         font-size: 3rem;
+        grid-auto-flow: column;
+        grid-column-gap: 1rem;
         white-space: nowrap;
-
-        [role="button"] {
-            position: relative;
-
-            :not(:first-child) {
-                position: absolute;
-                bottom: 50%;
-                left: 0;
-                transform: translateY(50%) scale(0.9);
-            }
-        }
 
         .full {
             color: os-color(yellow);
