--- a/src/app/pages/partners/partner-details/reviews/user-review.scss
+++ b/src/app/pages/partners/partner-details/reviews/user-review.scss
@@ -32,7 +32,8 @@
         @include body-font(1.2rem);
 
         color: text-color(helper);
-        display: grid;
+        display: flex;
+        flex-flow: wrap;
         grid-column-gap: 1rem;
 
         .stars {
@@ -44,6 +45,18 @@
     .rating-and-controls,
     .rating-and-controls ~ * {
         grid-column: 1/3;
+
+        @include width-up-to($phone-max) {
+            margin-bottom: -0.5rem;
+
+            .user-controls {
+                @include width-up-to($phone-max) {
+                    margin-bottom: 0.8rem;
+                    margin-top: 0.8rem;
+                }
+            }
+        }
+
     }
 
     .review-status {
@@ -53,10 +66,6 @@
         margin: 0 $normal-margin;
         padding: 0 1rem;
         text-transform: uppercase;
-
-        @include width-up-to($phone-max) {
-            display: none;
-        }
     }
 
     .response {
