Port errata summary to React
Issue #1784

--- a/src/app/pages/errata-summary/table/table.scss
+++ b/src/app/pages/errata-summary/table/table.scss
@@ -70,7 +70,7 @@
         th,
         td > div {
             line-height: 1.4;
-            padding: 2rem;
+            padding: $normal-margin;
             text-align: left;
             vertical-align: top;
             white-space: pre-wrap;
