--- a/src/app/pages/research/research.scss
+++ b/src/app/pages/research/research.scss
@@ -1,20 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .research.page {
-
-    @include width-up-to($phone-max) {
-        people-tabs,
-        tab-content {
-            display: none;
-        }
-    }
-
-    @include wider-than($phone-max) {
-        accordion-region {
-            display: none;
-        }
-    }
-
     h1 {
         @include set-font(h2);
 
@@ -25,103 +11,8 @@
         padding: 6rem 0;
     }
 
-    .hero {
-        @include set-font(body-large);
-
-        background-color: rgb(0, 191, 217);
-        display: grid;
-        max-width: 100%;
-        padding: 0;
-
-        @include width-up-to($phone-max) {
-            grid-template-rows: auto auto;
-            width: 100%;
-        }
-
-        @include width-between($phone-max, $media-content-max) {
-            grid-gap: 2rem;
-            grid-template-columns: 50vw 1fr;
-        }
-
-        @include wider-than($media-content-max) {
-            grid-template-columns: minmax(50vw, 3fr) 4fr;
-        }
-
-        @include wider-than($wide-screen-min) {
-            grid-template-columns: 1fr 1fr;
-        }
-
-        h1 {
-            @include set-font(h1);
-        }
-
-        .content {
-            align-items: center;
-            display: grid;
-            text-align: left;
-
-            @include width-between($tablet-max, $media-content-max) {
-                min-height: calc(100vw * #{35em / $media-content-max});
-            }
-
-            @include wider-than($media-content-max) {
-                margin-left: calc(50vw - 60rem);
-                max-width: calc(50% + 24rem);
-                min-height: 60rem;
-                width: 77rem;
-            }
-
-            > div {
-                @include width-up-to($phone-max) {
-                    padding-top: 6rem;
-                }
-
-                @include wider-than($phone-max) {
-                    padding: 6rem 0;
-                }
-            }
-
-        }
-
-        .images {
-            place-self: end end;
-            position: relative;
-            width: 100%;
-
-            .clipping {
-                display: grid;
-                width: 100%;
-
-                > img {
-                    width: 100%;
-                }
-            }
-
-            .globe-clipping {
-                bottom: 0;
-                overflow: hidden;
-                position: absolute;
-                right: 0;
-                transform: translateY(35%);
-                width: 100%;
-                z-index: 1;
-
-                @include width-up-to($phone-max) {
-                    max-width: 70vw;
-                    transform: translate(-20%, 30%);
-                }
-
-                img {
-                    max-height: 150%;
-                    max-width: 100%;
-                    transform: translateX(calc(7% + 2rem));
-                }
-            }
-        }
-    }
-
-    .current-projects,
-    .publications {
+    .projects-section,
+    .publications-section {
         background-color: lighten(ui-color(default), 3%);
     }
 
@@ -129,24 +20,6 @@
         @extend %content;
     }
 
-    .project-cards {
-        display: grid;
-        grid-gap: #{2 * $normal-margin};
-        margin-top: 3rem;
-
-        @include width-up-to($phone-max) {
-            grid-template-columns: repeat(5, 30rem);
-            overflow-x: scroll;
-        }
-
-        @include width-between($phone-max, $tablet-max) {
-            grid-template-columns: 1fr 1fr;
-        }
-
-        @include wider-than($tablet-max) {
-            grid-template-columns: 1fr 1fr 1fr;
-        }
-    }
 
     .card {
         @extend %card;
@@ -197,43 +70,6 @@
         &.orange .card-content {
             border-color: inherit;
             border-image: linear-gradient(to right, darken(os-color(orange), 20%), os-color(gold)) 1 stretch;
-        }
-    }
-
-    .people {
-        h2 {
-            @include set-font(body-large);
-
-            padding-top: 0;
-        }
-    }
-
-    .publications {
-        max-width: 100%;
-
-        h1 {
-            margin: 0;
-        }
-
-        .content {
-            @extend %text-content;
-
-            display: grid;
-            grid-row-gap: 2.5rem;
-        }
-
-        .publication {
-            display: grid;
-            grid-row-gap: 1rem;
-
-            a {
-                align-items: center;
-                grid-template-columns: auto 1fr;
-            }
-        }
-
-        .headline {
-            font-weight: bold;
         }
     }
 }
