--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -222,6 +222,10 @@ sup {
     flex: 1 0 auto;
     z-index: 0;
 
+    @include width-up-to($tablet-max) {
+        padding-top: 5rem;
+    }
+
     &.with-sticky:not(.with-modal) {
         z-index: 1;
     }
