--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -1,6 +1,7 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.blog.page .article {
+.blog.page .article,
+.lightbox-article {
     background-color: ui-color(white);
     max-width: 100vw;
     width: 100%;
