--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -1,238 +1,71 @@
 @import 'pattern-library/core/pattern-library/headers';
-
-$light: #f8f8f8;
+@import 'mixins/placeholder-selectors';
+@import 'mixins/responsive';
 
 .annual-report.page {
-    section {
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        max-width: 100vw;
-        min-height: 40rem;
-        overflow-y: visible;
-        padding: 12rem 6rem;
+    > .hero {
+        @extend %light-on-dark;
 
-        @include width-up-to($phone-max) {
-            padding: 3rem 2rem;
+        background-color: os-color(deep-green);
+        color: white;
+
+        a {
+            color: inherit;
         }
 
-        &#banner {
-            background-position-x: 84%;
-        }
+        .btn {
+            @include button();
+            @extend %primary;
 
-        &.white {
-            background-color: ui-color(white);
-        }
-
-        &.light {
-            background-color: $light;
-        }
-
-        > .content {
-            padding-left: $normal-margin;
-            padding-right: $normal-margin;
+            justify-self: left;
         }
     }
 
-    p,
-    h1,
-    h2,
-    h3 {
+    h1 {
+        @include scaling-title-font(h3, h1);
+
         margin: 0;
     }
 
-    img {
-        max-width: 100%;
+    h2 {
+        @include scaling-title-font(h3, h2);
+
+        margin: 0;
     }
 
-    a {
-        svg {
-            margin-left: 0.4rem;
+    $near-white: #f8f8f8;
+    .off-white {
+        background-color: $near-white;
+    }
+
+    section {
+        @include width-up-to($phone-max) {
+            padding: 4rem 0;
+        }
+        @include wider-than($phone-max) {
+            padding: 6rem 0;
         }
     }
 
-    .content {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: $content-max;
+    .boxed,
+    .text-content {
+        align-items: flex-start;
 
         > .text-content {
-            padding-left: 0;
-            padding-right: 0;
+            padding: 0;
         }
     }
 
     .text-content {
-        align-content: start;
-        display: grid;
-        grid-gap: 3rem;
-        margin-bottom: 3rem;
         margin-left: 0;
     }
 
-    .text-block {
-        display: grid;
-        grid-auto-rows: min-content;
-        grid-gap: 3rem;
-        justify-items: start;
-        max-width: 60rem;
-    }
-
-    .caption {
-        @include set-font(helper-label);
-
-        max-width: 40rem;
-    }
-
-    .btn {
-        @extend %button;
-
-        &.primary {
-            @extend %primary;
-        }
-    }
-
-    .text-left-photo-right {
-        display: grid;
-        grid-gap: 4rem;
-
-        @include wider-than($tablet-max) {
-            grid-template-columns: minmax(auto, 60rem) auto;
-        }
-    }
-
-
-    .card {
-        @extend %card;
-
-        background-color: ui-color(white);
-        padding: 4rem;
-    }
-
-    .text-overlapping-photo {
-        align-items: center;
-        display: grid;
-        grid-template-columns: minmax(24rem, 60rem) auto;
-        width: 100%;
-
-        @include width-up-to($phone-max) {
-            grid-template-columns: auto;
-        }
-
+    .strip-outer-margins {
         > :first-child {
-            min-width: 10rem;
+            margin-top: 0;
         }
-
-        .text-block {
-
-            @include width-between($phone-max, $tablet-max) {
-                margin-left: -4rem;
-            }
-
-            @include wider-than($tablet-max) {
-                margin-left: -6rem;
-                padding-left: 8rem;
-            }
-        }
-
-        .card {
-            background-color: ui-color(white);
-            padding: 4rem;
-
-            @include width-up-to($phone-max) {
-                border-top-left-radius: 0;
-                border-top-right-radius: 0;
-                box-shadow: none;
-            }
-
-            @include wider-than($tablet-max) {
-                padding: 6rem;
-            }
+        > :last-child {
+            margin-bottom: 0;
         }
     }
-
-    .fact-boxes,
-    .testimonial-boxes,
-    .icon-row {
-        display: grid;
-        grid-gap: $normal-margin;
-        margin-top: 4rem;
-    }
-
-    .icon-row {
-        grid-template-columns: repeat(auto-fit, minmax(4rem, auto));
-        height: 4rem;
-        margin-top: 0;
-        min-width: 90rem;
-
-        > img {
-            max-height: 4rem;
-        }
-    }
-
-    .testimonial-boxes {
-        grid-template-columns: repeat(3, 1fr);
-
-        @include width-up-to($phone-max) {
-            grid-template-columns: 1fr;
-        }
-
-        .card {
-            display: grid;
-            grid-template-rows: auto 1fr;
-            padding: 0;
-
-            .text-block {
-                grid-template-rows: 1fr auto;
-                height: 100%;
-                padding: 4rem;
-            }
-        }
-    }
-
-    .centered {
-        display: grid;
-        grid-gap: $normal-margin;
-        justify-items: center;
-        margin-bottom: 4rem;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 40rem;
-        text-align: center;
-    }
-
-    #banner {
-        background-color: os-color(blue);
-        color: text-color(white);
-    }
-
-    #founding {
-        padding-bottom: 4rem;
-    }
-
-    .hide-on-mobile {
-        @include width-up-to($phone-max) {
-            display: none;
-        }
-    }
-
-    .mobile-only {
-        @include wider-than($phone-max) {
-            display: none;
-        }
-    }
-
-    .scroll-on-mobile {
-        max-width: 100%;
-        overflow-x: auto;
-
-        > img {
-            max-height: 65rem;
-
-            @include width-up-to($tablet-max) {
-                max-width: none;
-            }
-        }
-    }
-
 }
